Commit hecho por Sean

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <nav class="navbar">
         <div class="btn-container">
-            <button class="round-btn">Botón 1</button>
+            <button class="round-btn">Inicio</button>
             <button class="round-btn">Botón 2</button>
         </div>
         <div class="section-container">
