primer PR a develop

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+    <!--barra navegadora-->
     <nav class="navbar">
         <div class="btn-container">
             <button class="round-btn">Inicio</button>
@@ -18,5 +19,25 @@
             <img src="logo.png" alt="Logo">
         </div>
     </nav>
+    <!--Section David-->
+    <section>
+
+    </section>
+    <!--Section Pablo-->
+    <section>
+
+    </section>
+    <!--Section Uriel-->
+    <section>
+
+    </section>
+    <!--Section Omar-->
+    <section>
+
+    </section>
+    <!--Section Ricaldi-->
+    <section>
+
+    </section>
 </body>
 </html>
