--- a/index.html
+++ b/index.html
@@ -18,7 +18,29 @@
         </div>
     </nav>
     <!--Section David-->
-    <section>
+    <section class="mapas">
+        <div class= "Contenedormapas">
+            <div class="columna">
+                <img class="image1" src="images/mapa2.png" class="imgBanner" alt="">
+            </div>
+            <div class="columna">
+                <h1 class="titulocol">CLIMAPS</h1>
+                <p id="txtmapas">
+                    Climaps es una plataforma con el objetivo de <br>
+                    brindar alertas e información sobre fenómenos<br>
+                    naturales en distintas zonas geográficas.
+                </p>
+                <div class="botonesimagenes">
+                    <a href="#" class="btn1banner">Button 1</a>
+                    <a href="#" class="btn2banner">Button 2</a>
+                </div>
+                
+            </div>
+            <div class="columna">
+                <img class="image1" src="images/mapa1.png" class="imgBanner2" alt="">
+            </div>
+
+        </div>
 
     </section>
     <!--Section Pablo-->
