commit hecho por Omar

--- a/index.html
+++ b/index.html
@@ -30,8 +30,28 @@
 
     </section>
     <!--Section Omar-->
-    <section>
-
+    <section class="ofrecemos">
+        <div class="titulito">
+            <h2>Ofrecemos</h2>
+        </div>
+        <div class="parrafito">
+            <p>
+                Desarrollo de una solución disponible para diferentes plataformas, perfecta para poder realizar las operaciones mencionadas anteriormente
+            </p>
+        </div>
+        <div class="tablet">
+            <img class= "imagen" src="images/tabletapp.png" alt="">
+            <h3>Tablet App</h3>
+        </div>
+        <div class="laptop">
+            <img class= "imagen" src="images/webaaphome.png" alt="">
+            <h3>Mobile App</h3>
+        </div>
+        <div class="mobile">
+            <img class= "imagen" src="images/mobileapp.png" alt="">
+            <h3>Web App Home</h3>
+        </div>
+        
     </section>
     <!--Section Ricaldi-->
     <section>
