--- a/index.html
+++ b/index.html
@@ -41,8 +41,13 @@
     });
     </script>
     <!--Section David-->
+    <section>
+        <body>
+            <section class="zigzag-section"></section>
+          </body>
+          
     <section class="mapas">
-        <div id="home" class= "Contenedormapas">
+        <div class= "Contenedormapas">
             <div class="columna">
                 <img class="image1" src="images/mapa2.png" class="imgBanner" alt="">
             </div>
@@ -68,13 +73,11 @@
     </section>
     <!--Section Pablo-->
     <section>
-        <div id="alertas">
 
-        </div>
     </section>
     <!--Section Uriel-->
     <section class="backprono">
-    <div id="prono" class="pronosticos">
+    <div class="pronosticos">
         <br><br><br><br><br><br><br><br>
         <h1>Pronósticos</h1>
         <p>Infórmese sobre las condiciones climáticas,<br>
@@ -105,16 +108,32 @@
     </div>
     </section>
     <!--Section Omar-->
-    <section>
-        <div id="nosotros">
-
+    <section class="ofrecemos">
+        <div class="titulito">
+            <h2>Ofrecemos</h2>
         </div>
+        <div class="parrafito">
+            <p>
+                Desarrollo de una solución disponible para diferentes plataformas, perfecta para poder realizar las operaciones mencionadas anteriormente
+            </p>
+        </div>
+        <div class="tablet">
+            <img class= "imagen" src="images/tabletapp.png" alt="">
+            <h3>Tablet App</h3>
+        </div>
+        <div class="laptop">
+            <img class= "imagen" src="images/webaaphome.png" alt="">
+            <h3>Mobile App</h3>
+        </div>
+        <div class="mobile">
+            <img class= "imagen" src="images/mobileapp.png" alt="">
+            <h3>Web App Home</h3>
+        </div>
+        
     </section>
     <!--Section Ricaldi-->
     <section>
-        <div id="contacto">
 
-        </div>
     </section>
     <!--Section Uriel-->
     <section>
