--- a/index.html
+++ b/index.html
@@ -35,6 +35,48 @@
     </section>
     <!--Section Ricaldi-->
     <section>
+        <!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+   
+<html>
+<head>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+    <section id="nosotros">
+        <h2>Nosotros</h2>
+        <div class="container">
+            <div class="image-container">
+                <img src="images/mapa_sismico_2017_b1.jpg" alt="Mapa">
+            </div>
+            <div class="text-container">
+                <p>
+                    Startup peruana, con el objetivo de evitar accidentes, reprogramaciones, entre otros problemas que se presentan al momento de viajar sin antes planificar, realizar actividades en lugares propensos a desastres naturales.
+                </p>
+            </div>
+            <div class="image-container"></div>
+                <img src="images/OverDrop-Weather.jpg" alt="Info">
+                
+            </div>
+        </div>
+    </section>
+</body>
+</html>
+
+            </div>
+        </div>
+    </section>
+</body>
+</html>
+
+    </section>
+</body>
+</html>
+
 
     </section>
 </body>
