--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
     <section>
 
     </section>
-    <!--Section Pablo-->
+    <div class="alert-section">
+        <div class="alert-image">
+          <img src="images/alertas.PNG" alt="Imagen de Alerta" class="alert-img">
+        </div>
+        <div class="alert-content">
+          <h2 class="alert-title">Alertas</h2>
+          <p class="alert-description">Reciba alertas e informese en tiempo real sobre los principales acontecimientos naturales en diferentes lugares del Perú, evite retrasos, cancelaciones de viaje, postergaciones de planes, entre otros.</p>
+          <button class="custom-button">MORE</button>
+        </div>
+      </div>
     <section>
 
     </section>
