--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
                     <img class="image1" src="images/mapa2.png" class="imgBanner" alt="">
                 </div>
                 <div class="columna1">
-                    <h1 class="titulocol">CLIMAPS</h1>
                     <p id="txtmapas" class="txtmapas">
+                        <span style="font-size: 35pt; font-weight: bold;">CLIMAPS</span>
+                        <br>
                         Climaps es una plataforma con el objetivo de <br>
                         brindar alertas e información sobre fenómenos<br>
                         naturales en distintas zonas geográficas.
@@ -78,7 +79,11 @@
     </div>
     <div class="alert-content">
       <h2 class="alert-title">Alertas</h2>
-      <p class="alert-description">Reciba alertas e informese en tiempo real sobre los principales acontecimientos naturales en diferentes lugares del Perú, evite retrasos, cancelaciones de viaje, postergaciones de planes, entre otros.</p>
+      <h3 style="font-size: 15pt;  font-family: Arial;">Reciba alertas e infórmese en tiempo real sobre los principales acontecimientos naturales en diferentes lugares del Perú</h3>
+      <h3 style="font-size: 15pt; font-family: Arial;">evite retrasos, cancelaciones de viaje, postergaciones de planes, entre otros</h3>
+      <h3>  </h3>
+      <h3>  </h3>
+      <br>
       <button class="custom-button">MORE</button>
     </div>
   </div>
@@ -143,43 +148,42 @@
         </div>
     </section>
     <!--Section Ricaldi-->
-    <section>
+     <section>
 <section class="nosotros">
-        <h2>Nosotros</h2>
-        <div class="container">
-            <div class="image-container">
-                <img src="images/mapa_sismico_2017_b1.jpg" alt="Mapa">
-            </div>
-            <div class="text-container">
-                <p>
-                    Startup peruana, con el objetivo de evitar accidentes, reprogramaciones, entre otros problemas que se presentan al momento de viajar sin antes planificar, realizar actividades en lugares propensos a desastres naturales.
-                </p>
-            </div>
-            <div class="image-container"></div>
-                <img src="images/OverDrop-Weather.jpg" alt="Info">
-                
-            </div>
-        </div>
-    </section>
+        <h2 style="font-size: 35pt;  font-family: Arial;">Nosotros</h2>
+    </section> 
 </div>
     </section>
     <!--Section Uriel-->
-    <section>
-        <section class="contact-section">
+        <div class="contact-section">
             <h1>Contacto</h1>
-            <h2>Lorem Ipsum</h2>
-            <input type="text" placeholder="Nombre" class="edit-input">
-            <input type="text" placeholder="Email" class="edit-input">
-            <input type="text" placeholder="Teléfono" class="edit-input">
-            <input type="text" placeholder="Editar" class="edit-input">
+            <p>Dejenos sus datos y nos comunicaremos con usted</p>
+            <input type="text" placeholder="Nombre">
+            <input type="text" placeholder="Teléfono">
+            <input type="text" placeholder="Email">
             <button type="submit">Enviar</button>
-          </section>
-           
-    </section>
-    <section>
-        <div class="reference">
-
         </div>
-    </section>
+        <section class="background-section">
+            <div class="column">
+              <h2>CLIMAPS</h2>
+              <p>Climaps es una plataforma con el objetivo de brindar alertas e información sobre fenómenos naturales en distintas zonas geográficas.</p>
+            </div>
+            <div class="column">
+              <h2>Links</h2>
+              <ul>
+                <li>Home</li>
+                <li>Alertas</li>
+                <li>Nosotros</li>
+                <li>Ofrecemos</li>
+                <li>Contacto</li>
+              </ul>
+            </div>
+            <div class="column">
+              <h2>Contact Us</h2>
+              <p>+51 987 654 321</p>
+              <p>climaps@gmail.com</p>
+              <p>Lima, Perú</p>
+            </div>
+          </section>
 </body>
 </html>
