--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           navList.classList.toggle('active');
         });
         </script>
-            <div class= "Contenedormapas">
+            <div id="home" class= "Contenedormapas">
                 <div class="columna">
                     <img class="image1" src="images/mapa2.png" class="imgBanner" alt="">
                 </div>
@@ -73,7 +73,7 @@
     <section>
 <div class="alertas">
 </section>
-<div class="alert-section">
+<div id="alertas" class="alert-section">
     <div class="alert-image">
       <img src="images/alertas.PNG" alt="Imagen de Alerta" class="alert-img">
     </div>
@@ -91,7 +91,7 @@
 </div>
     </section>
     <!--Section Uriel-->
-    <section class="backprono">
+    <section id="prono" class="backprono">
     <div class="pronosticos">
         <br><br><br><br><br><br><br><br>
         <h1>Pronósticos</h1>
@@ -123,7 +123,7 @@
     </div>
     </section>
     <!--Section Omar-->
-    <section class="ofrecemos">
+    <section id="ofrecemos" class="ofrecemos">
         <div class="ContenerdorOfrecemos">
             <div class="titulito">
             <h2>Ofrecemos</h2>
@@ -149,13 +149,13 @@
     </section>
     <!--Section Ricaldi-->
      <section>
-<section class="nosotros">
+<section id="nostros" class="nosotros">
         <h2 style="font-size: 35pt;  font-family: Arial;">Nosotros</h2>
     </section> 
 </div>
     </section>
     <!--Section Uriel-->
-        <div class="contact-section">
+        <div id="contacto" class="contact-section">
             <h1>Contacto</h1>
             <p>Dejenos sus datos y nos comunicaremos con usted</p>
             <input type="text" placeholder="Nombre">
