--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                         naturales en distintas zonas geográficas.
                     </p>
                     <div class="botonesimagenes">
-                        <a href="#" class="btn1banner">Button 1</a>
-                        <a href="#" class="btn2banner">Button 2</a>
+                        <a href="#" class="btn1banner">Ver más</a>
+                        <a href="#" class="btn2banner">Quiero información</a>
                     </div>
                     
                 </div>
